--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "dev-m": "gatsby develop -H 0.0.0.0 -p 8000 -o",
-    "dev-m-clean": "gatsby clean && gatsby develop -H 0.0.0.0 -p 8000 -o"
+    "dev-m-clean": "gatsby clean && gatsby develop -H 0.0.0.0 -p 8000 -o",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
@@ -34,5 +35,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "sass": "^1.38.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
